k8s/apps/workloads/hwpo-flex/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hwpo-flex
  labels:
    app.kubernetes.io/name: hwpo-flex
    app.kubernetes.io/component: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: hwpo.apps.fondevilla.io
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - hwpo.apps.fondevilla.io
      secretName: hwpo-flex-tls
  rules:
    - host: hwpo.apps.fondevilla.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hwpo-flex
                port:
                  number: 80
